# ros-docker-rpi

./: Dockerfile.arm64  Dockerfile.arm64.backup  Dockerfile.monitor  Dockerfile.web  Dockerfile.web.backup  LICENSE  README.md  convert_to_ros2.sh  docker-compose.pi.yml  docker-compose.pi.yml.backup  entrypoint.sh  requirements.txt  requirements.txt.backup  robot_viz.html
catkin_ws/src/my_robot_description/: CMakeLists.txt  package.xml
catkin_ws/src/my_robot_description/config/: robot.rviz
catkin_ws/src/my_robot_description/urdf/: robot.urdf  robot.urdf.xacro  simple_robot.urdf
catkin_ws/src/my_robot_gazebo/: CMakeLists.txt
catkin_ws/src/my_robot_gazebo/launch/: gazebo.launch  gazebo_bridge.launch  headless_simulation.launch  test_world.launch
catkin_ws_backup/devel/: setup.bash
catkin_ws_backup/src/: CMakeLists.txt
catkin_ws_backup/src/my_robot_description/launch/: display.launch
catkin_ws_backup/src/my_robot_gazebo/: package.xml
jupyter/: robot_web_interface.ipynb
matlab/: robot_data_plotter.m
monitor/: monitor.py  requirements.txt 
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/urdf/: README.md
ros2_ws/src/my_robot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_gazebo/launch/: headless_simulation.launch.py
scripts/: build_ros2_workspace.sh  create_viz.sh  debug_robot.sh  init.sh  monitor_pi_resources.sh  pi_setup.sh  run_headless_sim.sh  setup_pi_final.sh  spawn_robot.sh  start_gazebo_sim.sh  start_monitor.sh  start_robot_system.sh  start_tf2_web.sh  start_web_interface.sh  teleop.sh  test_ros2_setup.sh  test_urdf.sh  tf2_web_republisher.py  virtual_robot.py  virtual_robot.py.backup
web_interface/: app.py  app.py.backup
web_interface/static/js/: ros3d_viewer.js
web_interface/templates/: advanced_material_handling.html  advanced_material_handling.html.backup  dashboard.html  excel_integration.html  index.html  material_handling.html  material_handling.html.backup  physics_data_logger.html  physics_tuner.html  quality_control.html  robot.html  robot_physics_controller.html
worlds/: empty.world  test_world.world
