<?xml version="1.0"?>
<package format="2">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>Robot description package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
